# new-coin-public

./: CHANGELOG.md  Dockerfile  LICENSE  README.md  README_RU.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  test_i18n.py  test_infra_and_repo_helpers.py  test_menu_router.py  test_notifier.py  test_notifier_delivery.py  test_notifier_fanout.py  test_scoring.py
alembic/: env.py
alembic/versions/: 20260219_0001_initial.py  20260220_0002_features.py  20260301_0003_analytics_events.py  20260317_0004_service_state.py
app/: __init__.py  config.py  health.py  i18n.py  logging_setup.py  main.py  metrics.py
app/bot/: callback_data.py  dispatcher.py  lang.py
app/db/: models.py  session.py
app/db/repo/: mutes.py  (+9 more)
app/exchanges/: base.py  binance.py  bybit.py  coinbase.py  mexc.py  okx.py
app/jobs/: scheduler.py
app/scripts/: simulate_event.py
app/services/: announcements.py  arbitrage.py  coingecko.py  dedup.py  delisting.py  detector.py  digest.py  enrich.py  filtering.py  formatter.py  notifier.py  price_alerts.py  scoring.py  tracker.py  volume_spike.py
docs/: BUYER_HANDOFF.md  RELEASE_NOTES_2026-03-17.md  SMOKE_TEST.md
scripts/: deploy.sh
tests/: test_analytics_enum.py  test_announcements_state.py  test_arbitrage.py  test_coingecko.py  test_command_handlers.py  test_config_and_repo_helpers.py  test_dedup.py  test_detector.py  test_digest_service.py  test_enrich_service.py  test_filtering.py  test_onboarding_handlers.py  test_price_alerts_service.py  test_reporting_handlers.py  test_scheduler.py  test_tracker.py  test_ui_i18n.py
(+25 files in other folders)
