[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cex-listing-bot"
version = "0.2.0"
description = "Telegram bot for tracking new spot/futures listings on CEX exchanges."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.15.0,<4.0.0",
  "aiohttp>=3.9.0",
  "SQLAlchemy>=2.0.30,<3.0.0",
  "asyncpg>=0.29.0,<1.0.0",
  "alembic>=1.13.0,<2.0.0",
  "APScheduler>=3.10.4,<4.0.0",
  "python-dotenv>=1.0.0",
  "python-json-logger>=2.0.7",
  "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.7.0",
  "pip-audit>=2.7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
ignore = ["E402"]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 45

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
